Fix: fixed warnings